--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,11 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-10-04 23:15+0000\n"
 "Last-Translator: Luiz Fernando Ranghetti <elchevive68@gmail.com>\n"
-"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/"
-"snapper/master/pt_BR/>\n"
+"Language-Team: Portuguese (Brazil) <https://l10n.opensuse.org/projects/snapper/master/pt_BR/>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -390,6 +389,10 @@ msgstr "Não é possível reverter porque o subvolume padrão é desconhecido."
 msgid "Cleanup"
 msgstr "Limpeza"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Falha ao abrir o arquivo '%s'."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "O comando 'cleanup' precisa de um argumento."
 
@@ -754,6 +757,10 @@ msgstr "Somente leitura"
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Consulte \"man snapper\" para obter mais instruções."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Falha ao abrir o arquivo '%s'."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
