--- a/po/ca.po
+++ b/po/ca.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-07-12 13:15+0000\n"
 "Last-Translator: David Medina <medipas@gmail.com>\n"
-"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/"
-">\n"
+"Language-Team: Catalan <https://l10n.opensuse.org/projects/snapper/master/ca/>\n"
 "Language: ca\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -384,6 +383,10 @@ msgstr "No es pot fer un retrocés ja que es desconeix el subvolum per defecte."
 msgid "Cleanup"
 msgstr "Neteja"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Ha fallat obrir el fitxer %s."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "L'ordre cleanup necessita un argument."
 
@@ -749,6 +752,10 @@ msgstr "Només de lectura"
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Vegeu \"man snapper\" per a més informació."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Ha fallat obrir el fitxer %s."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
