--- a/po/fi.po
+++ b/po/fi.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2022-04-03 22:12+0000\n"
 "Last-Translator: Tommi Nieminen <software@legisign.org>\n"
 "Language-Team: Finnish <https://l10n.opensuse.org/projects/snapper/master/fi/>\n"
@@ -393,6 +393,10 @@ msgstr "Palautusta (rollback) ei voi tehdä, koska oletusalitaltio on tuntematon
 msgid "Cleanup"
 msgstr "Puhdistus"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Tiedoston \"%s\" avaaminen epäonnistui."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "\"cleanup\"-komento vaatii yhden parametrin."
 
@@ -762,6 +766,10 @@ msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Lisää ohjeita: ”man snapper”."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Tiedoston \"%s\" avaaminen epäonnistui."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
