--- a/po/fr.po
+++ b/po/fr.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-02-09 12:14+0000\n"
 "Last-Translator: Sophie Leroy <sophie@stoquart.com>\n"
 "Language-Team: French <https://l10n.opensuse.org/projects/snapper/master/fr/>\n"
@@ -400,6 +400,10 @@ msgstr "Impossible de revenir à l'état initial car le sous-volume par défaut 
 msgid "Cleanup"
 msgstr "Nettoyer"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Échec de l'ouverture du fichier '%s'."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "La commande 'cleanup' nécessite un argument."
 
@@ -782,6 +786,10 @@ msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Pour plus d'instructions, consultez 'man snapper'."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Échec de l'ouverture du fichier '%s'."
 
 # SLE12
 #, c-format
