--- a/po/hr.po
+++ b/po/hr.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2011-04-16 18:13+0200\n"
 "Last-Translator: Krešimir Jozić <kjozic@gmail.com>\n"
 "Language-Team: Croatian <kde-i18n-doc@kde.org>\n"
@@ -383,6 +383,10 @@ msgstr ""
 
 msgid "Cleanup"
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Otvaranje datoteke '%s' nije uspjelo."
 
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Naredba 'cleanup' treba jedan argument."
@@ -782,6 +786,10 @@ msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Otvaranje datoteke '%s' nije uspjelo."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
