--- a/po/id.po
+++ b/po/id.po
@@ -2,11 +2,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-08-08 15:15+0000\n"
 "Last-Translator: Kukuh Syafaat <syafaatkukuh@gmail.com>\n"
-"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/"
-"id/>\n"
+"Language-Team: Indonesian <https://l10n.opensuse.org/projects/snapper/master/id/>\n"
 "Language: id\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -384,6 +383,10 @@ msgstr "Tidak dapat melakukan rollback karena subvolume bawaan tidak diketahui."
 msgid "Cleanup"
 msgstr "Membersihkan"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Membuka berkas '%s' gagal."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Perintah 'cleanup' membutuhkan satu argumen."
 
@@ -748,6 +751,10 @@ msgstr "Hanya-Baca"
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Lihat 'man snapper' untuk instruksi lebih lanjut."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Membuka berkas '%s' gagal."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
