--- a/po/ku.po
+++ b/po/ku.po
@@ -5,7 +5,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: memory.ku.po\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2005-09-23 00:15+0200\n"
 "Last-Translator: Kurdish Team <i18n@suse.de>\n"
 "Language-Team: Kurdish Team <i18n@suse.de>\n"
@@ -387,6 +387,10 @@ msgstr ""
 msgid "Cleanup"
 msgstr "Paqij Bike"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Pel tê vekirin..."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr ""
 
@@ -767,6 +771,10 @@ msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr ""
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Pel tê vekirin..."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
