--- a/po/nl.po
+++ b/po/nl.po
@@ -9,11 +9,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-07-12 13:15+0000\n"
 "Last-Translator: Freek de Kruijf <freek@opensuse.org>\n"
-"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>"
-"\n"
+"Language-Team: Dutch <https://l10n.opensuse.org/projects/snapper/master/nl/>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -392,6 +391,10 @@ msgstr "Kan geen rollback doen omdat standaard subvolume onbekend is."
 msgid "Cleanup"
 msgstr "Opschonen"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Openen van bestand '%s' is mislukt."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Opdracht 'cleanup' heeft één argument."
 
@@ -756,6 +759,10 @@ msgstr "Alleen-lezen"
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Zie 'man snapper' voor meer instructies."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Openen van bestand '%s' is mislukt."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
