--- a/po/sk.po
+++ b/po/sk.po
@@ -6,11 +6,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-07-13 16:15+0000\n"
 "Last-Translator: Ferdinand Galko <galko.ferdinand@gmail.com>\n"
-"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>"
-"\n"
+"Language-Team: Slovak <https://l10n.opensuse.org/projects/snapper/master/sk/>\n"
 "Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -388,6 +387,10 @@ msgstr "Nie je možné vykonať návrat späť, pretože predvolený podzväzok 
 msgid "Cleanup"
 msgstr "Upratovanie"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "Otvorenie súboru '%s' zlyhalo."
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "Príkaz 'cleanup' potrebuje jeden argument."
 
@@ -760,6 +763,10 @@ msgstr "Len na čítanie"
 
 msgid "See 'man snapper' for further instructions."
 msgstr "Viac informácií nájdete na 'man snapper'."
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "Otvorenie súboru '%s' zlyhalo."
 
 #, c-format
 msgid "Setting default subvolume to snapshot %d."
