--- a/po/zh_TW.po
+++ b/po/zh_TW.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: @PACKAGE@\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-07-12 09:40+0200\n"
+"POT-Creation-Date: 2023-11-28 08:50+0100\n"
 "PO-Revision-Date: 2023-02-10 04:14+0000\n"
 "Last-Translator: Grace Yu <grace.yu@excel-gits.com>\n"
 "Language-Team: Chinese (Taiwan) <https://l10n.opensuse.org/projects/snapper/master/zh_TW/>\n"
@@ -419,6 +419,10 @@ msgstr "無法復原，因為預設子磁碟區未知。"
 msgid "Cleanup"
 msgstr "清理"
 
+#, fuzzy, c-format
+msgid "Client-side plugin '%s' failed."
+msgstr "開啟檔案 '%s' 失敗。"
+
 msgid "Command 'cleanup' needs one arguments."
 msgstr "命令 'cleanup' 需要一個參數。"
 
@@ -814,6 +818,10 @@ msgstr ""
 
 msgid "See 'man snapper' for further instructions."
 msgstr "如需更多指示，請參閱「man snapper」。"
+
+#, fuzzy, c-format
+msgid "Server-side plugin '%s' failed."
+msgstr "開啟檔案 '%s' 失敗。"
 
 # SLE12
 #, c-format
